<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">restaurantmenu</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="pizzeria_restaurant">PIZZERIA RESTAURANT</string>
    <string name="menu">MENU</string>
    <string name="language">Language:</string>
    <string name="flag_desc">A flag representing a corresponding language</string>
    <string name="pizza_desc">pizza image</string>
    <string name="table_num">Table 11</string>
    <string name="place_num">Place 2</string>
    <string name="pizzas">Pizzas</string>
    <string name="starters">Starters</string>
    <string name="pastas">Pastas</string>
    <string name="burgers">Burgers</string>
    <string name="drinks">Drinks</string>
    <string name="search">Search</string>
    <string name="call_waiter">Call waiter</string>
    <string name="item1_title">1. Lumache della casa</string>
    <string name="item1_diets">LL, (L, G)</string>
    <string name="item1_price">9.40 e / 15.20 e</string>
    <string name="item2_title">2. Instanta al pollo</string>
    <string name="item2_diets">Diets: L, (G)</string>
    <string name="item2_price">8.90 e</string>
    <string name="item3_title">3. Insalata al salmone</string>
    <string name="item3_diets">D, (G)</string>
    <string name="item3_price">7.90 e</string>
    <string name="item4_title">4. Salad table</string>
    <string name="item4_diets"/>
    <string name="item4_price">3.60 e / 9.20 e</string>
    <string name="item5_title">5. Sweet potato soup</string>
    <string name="item5_diets">LL, (G)</string>
    <string name="item5_price">7.90 e</string>
    <string name="to_languages">Language</string>
    <string name="my_order">My order</string>
    <string name="checkout">Checkout</string>
    <string name="item_img_desc">Shows the image of the item</string>
    <string name="item6_title">6. Antipasta artisotti</string>
    <string name="item6_diets"></string>
    <string name="item6_price">9.90 e</string>
    <string name="item_description">Chicken, fresh salad, pomegranate, seeds olives, marinated paprika and chili mayonnaise.</string>
    <string name="item_spiciness">Spiciness: mild</string>
    <string name="item_likes">55 people likes</string>
    <string name="add_to_order">Add to order</string>
    <string name="in_order">1 in order</string>
    <string name="remove_from_order">Remove from order</string>
    <string name="personal_choices">Your personal choices</string>
    <string name="ingredients">Add/Remove ingredients:</string>
    <string name="chkbox_chicken">Chicken</string>
    <string name="chkbox_pomeg">Pomegranade seeds</string>
    <string name="chkbox_olives">Olives</string>
    <string name="chkbox_paprika">Paprika</string>
    <string name="chkbox_chili">Chili mayonnaise</string>
    <string name="chkbox_gorgonzola">Gorgonzola cheese (0.50 e)</string>
    <string name="diet_options">Additional diet options:</string>
    <string name="gluten_free">Gluten-free</string>
    <string name="size">Size:</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="hide">Hide</string>
    <string name="special_request">Write special request</string>
    <string name="search_with_colon">Search:</string>
    <string name="max_price">Max price:</string>
    <string name="price_val">100 e</string>
    <string name="max_likes">Max likes:</string>
    <string name="likes_val">50</string>
    <string name="filter_diet">Filter by diet:</string>
    <string name="dairy_free">Dairy-free</string>
    <string name="lactose_free">Lactose-free</string>
    <string name="low_lactose">Low lactose</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="filter_spiciness">Filter by spiciness:</string>
    <string name="none">None</string>
    <string name="mild">Mild</string>
    <string name="medium_spiciness">Medium</string>
    <string name="hot">Hot</string>
    <string name="filter_type">Filter by type:</string>
    <string name="thin_crispy">Thin crispy</string>
    <string name="speciale_thin">Speciale thin crispy</string>
    <string name="pan_pizza">Pan pizza</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="clear_all">Clear all</string>
    <string name="close">Close</string>
    <string name="confirm_order">CONFIRM ORDER</string>
    <string name="waiting_order">WAITING FOR ORDER</string>
    <string name="total">TOTAL:</string>
    <string name="waiting_item_title1">25. Pizza Napoli</string>
    <string name="waiting_item_price1">12.00 e</string>
    <string name="waiting_item1_info1">- Without mozzarella</string>
    <string name="waiting_item1_info2">- Size: medium</string>
    <string name="edit_item">Edit choice</string>
    <string name="waiting_item_title2">43. Coke</string>
    <string name="waiting_item_price2">2.00 e</string>
    <string name="waiting_item2_info1">- Size: small</string>
    <string name="total_price_val">14.00 e</string>
    <string name="choose_payment">Choose your payment method:</string>
    <string name="by_tablet">Pay by tablet</string>
    <string name="by_phone">Pay by smartphone</string>
    <string name="call_for_check">Call waiter for check</string>
    <string name="nota_bene">(To pay for several people, choose this)</string>
    <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="orderSent">Your order has been sent to the kitchen. The cook is now preparing your meal.</string>
    <string name="confirmed">CONFIRMED</string>

</resources>
