<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/expandedItemLayout"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginLeft="15dp"
	android:layout_marginTop="10dp"
	android:columnCount="2"
	android:rowCount="2"
	android:orientation="horizontal"
	android:background="@drawable/border_large"
	android:clickable="true">

    <ImageView
		android:id="@+id/itemImageView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="10dp"
		android:layout_column="0"
     	android:layout_row="0"
		android:contentDescription="@string/item_img_desc" />

    <LinearLayout
		android:id="@+id/itemDescriptionLayout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_column="1"
		android:layout_row="0"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="10dp"
		android:orientation="vertical" >

        <TextView
		    android:id="@+id/itemTitleView"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textAppearance="?android:attr/textAppearanceLarge"
		    android:textColor="#000080"
		    android:typeface="serif" />

        <TextView
		    android:id="@+id/itemDescriptionView"
		    android:layout_width="230dp"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dp"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textColor="#000080"
		    android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
		android:id="@+id/itemInfoLayout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_column="0"
		android:layout_row="1"
		android:layout_marginLeft="20dp"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		android:orientation="vertical" >
        
        <TextView
		    android:id="@+id/itemDietsView"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textColor="#000080"
		    android:typeface="serif" />
        
        <TextView
		    android:id="@+id/itemSpicinessView"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dp"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textColor="#000080"
		    android:typeface="serif" />
           
        <Button
			android:id="@+id/likeButton"
			style="@android:style/Widget.Holo.Button.Borderless"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:clickable="true"
			android:text="@string/item_likes"
			android:drawablePadding="10dp"
			android:drawableRight="@drawable/like"
			android:textColor="#000080"
			android:typeface="serif"
			android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView 
		    android:id="@+id/ingredientsView"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dp"
		    android:text="@string/ingredients"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textColor="#000080"
		    android:typeface="serif" />
						            
		<CheckBox
			android:id="@+id/checkBox1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/chkbox_chicken"
			android:textAppearance="?android:attr/textAppearanceSmall"
		    android:textColor="#000080"
		    android:typeface="serif"
			android:checked="true" />
		        
		<CheckBox
			android:id="@+id/checkBox2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/chkbox_pomeg"
			android:textAppearance="?android:attr/textAppearanceSmall"
		    android:textColor="#000080"
		    android:typeface="serif"
			android:checked="true" />
		        
		<CheckBox
			android:id="@+id/checkBox3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/chkbox_olives"
			android:textAppearance="?android:attr/textAppearanceSmall"
		    android:textColor="#000080"
		    android:typeface="serif"
			android:checked="true" />
		        
		<CheckBox
			android:id="@+id/checkBox4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/chkbox_paprika"
			android:textAppearance="?android:attr/textAppearanceSmall"
		   	android:textColor="#000080"
		    android:typeface="serif"
			android:checked="true" />
		        
		<CheckBox
			android:id="@+id/checkBox5"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/chkbox_chili"
			android:textAppearance="?android:attr/textAppearanceSmall"
		    android:textColor="#000080"
		    android:typeface="serif"
			android:checked="true" />
		     
		<CheckBox
			android:id="@+id/checkBox6"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/chkbox_gorgonzola"
			android:textAppearance="?android:attr/textAppearanceSmall"
		    android:textColor="#000080"
		    android:typeface="serif"
			android:checked="false" />
		     
		<CheckBox
			android:id="@+id/dummyBox1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/chkbox_gorgonzola"
			android:textAppearance="?android:attr/textAppearanceSmall"
		    android:textColor="#000080"
		    android:typeface="serif"
		    android:visibility="invisible"
			android:checked="false" />
		     
		<Button
		    android:id="@+id/specialRequestButton"
		    style="@android:style/Widget.Holo.Button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:clickable="true"
		    android:text="@string/special_request"
		    android:drawablePadding="10dp"
		    android:drawableRight="@android:drawable/ic_dialog_email"
		    android:textColor="#000080"
		    android:typeface="serif"
		   	android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </LinearLayout>
    
   	<LinearLayout
		android:id="@+id/itemButtonLayout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_column="1"
		android:layout_row="1"
		android:orientation="vertical" >
        
   	    <LinearLayout
   	        android:id="@+id/priceAndOrderLayout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp"
			android:layout_marginLeft="10dp"
			android:orientation="horizontal" >
	        <TextView
			    android:id="@+id/inOrderView"
			    android:layout_width="wrap_content"
			    android:layout_height="35dp"
			    android:text="@string/in_order"
			    android:textAppearance="?android:attr/textAppearanceMedium"
			    android:textColor="#000080"
			    android:visibility="invisible"
			    android:typeface="serif" />
	        <TextView
			    android:id="@+id/itemPriceView"
			    android:layout_width="wrap_content"
			    android:layout_height="35dp"
			    android:layout_marginLeft="60dp"
			    android:textAppearance="?android:attr/textAppearanceMedium"
			    android:textColor="#000080"
			    android:typeface="serif" />
	   	</LinearLayout>
        
        <Button
			android:id="@+id/addToOrderButton"
			style="@android:style/Widget.Holo.Button.Borderless"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:clickable="true"
			android:text="@string/add_to_order"
			android:drawablePadding="10dp"
			android:drawableLeft="@android:drawable/ic_input_add"
			android:textColor="#000080"
			android:typeface="serif"
			android:onClick="addToOrderClicked"
	       	android:textAppearance="?android:attr/textAppearanceMedium" />
           
        <Button
			android:id="@+id/removeFromOrderButton"
			style="@android:style/Widget.Holo.Button.Borderless"
			android:layout_width="wrap_content"
			android:layout_height="35dp"
			android:clickable="true"
			android:text="@string/remove_from_order"
			android:drawablePadding="10dp"
			android:drawableLeft="@android:drawable/ic_delete"
			android:textColor="#000080"
			android:typeface="serif"
			android:visibility="invisible"
			android:onClick="removeFromOrderClicked"
			android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
		    android:id="@+id/dietOptionsView"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/diet_options"
		    android:layout_marginTop="17dp"
		    android:layout_marginLeft="10dp"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textColor="#000080"
		    android:typeface="serif" />
		
		<CheckBox
			android:id="@+id/checkBox7"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/gluten_free"
			android:textAppearance="?android:attr/textAppearanceSmall"
		    android:textColor="#000080"
		   	android:typeface="serif"
			android:checked="false" />
		
		<CheckBox
			android:id="@+id/dummyBox2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		 	android:text="@string/chkbox_gorgonzola"
			android:textAppearance="?android:attr/textAppearanceSmall"
		   	android:textColor="#000080"
		    android:typeface="serif"
		    android:visibility="invisible"
			android:checked="false" />
		
		<CheckBox
			android:id="@+id/dummyBox3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		 	android:text="@string/chkbox_gorgonzola"
			android:textAppearance="?android:attr/textAppearanceSmall"
		   	android:textColor="#000080"
		    android:typeface="serif"
		    android:visibility="invisible"
			android:checked="false" />
		
		<TextView
		    android:id="@+id/sizeView"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/size"
		    android:layout_marginTop="5dp"
		    android:layout_marginLeft="10dp"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textColor="#000080"
		    android:visibility="invisible"
		    android:typeface="serif" />
		
		<RadioButton
			android:id="@+id/radioButton1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/small"
			android:textAppearance="?android:attr/textAppearanceSmall"
		    android:textColor="#000080"
		   	android:typeface="serif"
		   	android:visibility="invisible"
			android:checked="false" />
		
		<RadioButton
			android:id="@+id/radioButton2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/medium"
			android:textAppearance="?android:attr/textAppearanceSmall"
		    android:textColor="#000080"
		   	android:typeface="serif"
		   	android:visibility="invisible"
			android:checked="true" />
		
		<RadioButton
			android:id="@+id/radioButton3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/large"
			android:textAppearance="?android:attr/textAppearanceSmall"
		    android:textColor="#000080"
		   	android:typeface="serif"
		   	android:visibility="invisible"
			android:checked="false" />
		
		<Button
	        android:id="@+id/personalChoicesButton"
	        style="@android:style/Widget.Holo.Button.Borderless"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="140dp"
	        android:clickable="true"
	        android:text="@string/hide"
	        android:drawablePadding="8dp"
	        android:drawableRight="@drawable/up_arrow"
	        android:textColor="#000080"
	        android:typeface="serif"
	       	android:textAppearance="?android:attr/textAppearanceMedium"
	       	android:onClick="personalChoicesClosed" />
        
	</LinearLayout>
    
 </GridLayout>